--- a/travel_recommendation_AboutUs.html
+++ b/travel_recommendation_AboutUs.html
@@ -6,7 +6,6 @@
             .hero {
   height: 500px;
   width: 1500px;
-  /*background-color: red;*/
 }
 
 .image-container {
@@ -20,7 +19,7 @@
 
 input::placeholder {
   color: #037479;
-  opacity: 1; /* Ensures full opacity in Firefox */
+  opacity: 1; 
 }
 
 .navbar {
@@ -37,14 +36,12 @@ input::placeholder {
   display: flex;
   align-items: center;
   gap: 10px;
-  /*background-color: green;*/
   padding: 0 10px;
 }
 
 .nav-links {
   display: flex;
   gap: 40px;
-  /*background-color: #340bc6;*/
   padding: 0 10px;
 }
 
@@ -92,13 +89,11 @@ border: none;
 }
 
 .container {
-  /*background-color:blue;*/
   display: flex;
   height: 700px;
 }
 
 .social-sidebar {
-  /*background-color: red;*/
   width: 30px;
   padding-left:11px;
   padding-top:89px;
@@ -106,7 +101,7 @@ border: none;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 10px; /* Space between icons */
+  gap: 10px; 
 }
 
 .social-sidebar img {
@@ -114,17 +109,12 @@ border: none;
 }
 
 .bodytext {
-  /*background-color: red;*/
-  flex: 1; /* Occupies remaining space */
+  flex: 1; 
   display: flex;
-  /*align-items: center;
-  justify-content: center;*/
 }
 
 .text-block-left {
-  /*background-color: green;*/
   width: 900px;
-  /*padding: 20px;*/
   padding-top:90px;
   padding-left:20px;
   margin-right:120px;
@@ -138,16 +128,14 @@ b {
 }
 
 .vertical-hr {
-    width: 2px;                   /* Thickness of the line */
-    height: 250px;                /* Length of the line */
-    background-color: #ffffff;      /* Color of the line */
-    border: none;                 /* Remove default border */
-  /*transform: rotate(90deg);     /* Rotate to make vertical */
+    width: 2px;    
+    height: 250px;  
+    background-color: #ffffff; 
+    border: none;                 
     margin-bottom:90px;
 }
 
 h3 {
-    /*background-color: #95121280;*/
     color:white;
     font-size:45px;
     margin:0; 
@@ -215,7 +203,7 @@ h1 {
                     <h3>ABOUT US</h3><br>
                     <div style="background-color: #00000050; padding:10px; color: #d4d4d4; border-radius: 10px;">Welcome to Out Company! We are a team of passionate individuals dedicated to providing excellent services/products to our customers. Our mission is to <b>provide the best experience</b> for people traveling to different destinations around the workd.<br>Our values include integrity. innovation, customer satisfaction, and teamworks. We believe in <b>Putting our customers First</b> and <b>working together</b> to achieve our goals.<br> Feel free to explore our website to learn more about what we offer!</b></div><br><br>
                     
-                    <div style=" display: flex; height: 150px; width: 900px;" ><!-- the main Div -->
+                    <div style=" display: flex; height: 150px; width: 900px;" >
                       <div style=" /*background-color: #0000ff;*/ float:left; font-size: 50px; list-style: none; margin: 0;">
                         <li style="padding-left:10px; margin-right:25px; margin-top:20px;">Our Team</li>
                       </div>
