--- a/travel_recommendation_ContactUs.html
+++ b/travel_recommendation_ContactUs.html
@@ -6,7 +6,6 @@
             .hero {
   height: 500px;
   width: 1500px;
-  /*background-color: red;*/
 }
 
 .image-container {
@@ -20,7 +19,7 @@
 
 input::placeholder {
   color: #037479;
-  opacity: 1; /* Ensures full opacity in Firefox */
+  opacity: 1; 
 }
 
 .navbar {
@@ -37,14 +36,12 @@ input::placeholder {
   display: flex;
   align-items: center;
   gap: 10px;
-  /*background-color: green;*/
   padding: 0 10px;
 }
 
 .nav-links {
   display: flex;
   gap: 40px;
-  /*background-color: #340bc6;*/
   padding: 0 10px;
 }
 
@@ -94,13 +91,11 @@ border: none;
 }
 
 .container {
-  /*background-color:blue;*/
   display: flex;
   height: 700px;
 }
 
 .social-sidebar {
-  /*background-color: red;*/
   width: 30px;
   padding-left:12px;
   padding-top:89px;
@@ -108,7 +103,7 @@ border: none;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 10px; /* Space between icons */
+  gap: 10px; 
 }
 
 .social-sidebar img {
@@ -116,18 +111,12 @@ border: none;
 }
 
 .bodytext {
-  /*background-color: red;*/
   width:1200px;
-  /*flex: 1; /* Occupies remaining space */
-  /*display: flex;
-  /*align-items: center;
-  justify-content: center;*/
 }
 
 .text-block-left {
   background-color: green;
   width: 400px;
-  /*padding: 20px;*/
   padding-top:90px;
   padding-left:20px;
   margin-right:220px;
@@ -137,20 +126,16 @@ border: none;
 }
 
 .text-block-right {
-
-  /*background-color: green;*/
     width: 400px;
     padding: 20px;
     color: white;
-  /*box-sizing: border-box;*/
 }
 
 .vertical-hr {
-    width: 2px;                   /* Thickness of the line */
-    height: 250px;                /* Length of the line */
-    background-color: #ffffff;      /* Color of the line */
-    border: none;                 /* Remove default border */
-  /*transform: rotate(90deg);     /* Rotate to make vertical */
+    width: 2px;    
+    height: 250px;   
+    background-color: #ffffff;  
+    border: none;     
     margin-bottom:90px;
 }
 
@@ -217,7 +202,7 @@ h1 {
                 </div>
                 
                 <div class="bodytext">
-                  <div style="width:350px; margin-top:300px; float:left;"><!-- this is the first Div to the left-->
+                  <div style="width:350px; margin-top:300px; float:left;">
                    <h3>CONTACT US</h3><br>
                    <h1>Get in touch</h1><br><br>
                  </div>
