fix the index link to home

--- a/travel_recommendation_AboutUs.html
+++ b/travel_recommendation_AboutUs.html
@@ -179,7 +179,7 @@ h1 {
                 <strong>TRAVELBLOOM</strong>
               </div>
               <nav class="nav-links">
-                <a href="travel_recommendation.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="#" class="active">About Us</a>
                 <a href="travel_recommendation_ContactUs.html">Contact Us</a>
               </nav>
