--- a/travel_recommendation_ContactUs.html
+++ b/travel_recommendation_ContactUs.html
@@ -182,7 +182,7 @@ h1 {
                 <strong>TRAVELBLOOM</strong>
               </div>
               <nav class="nav-links">
-                <a href="travel_recommendation.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="travel_recommendation_AboutUs.html">About Us</a>
                 <a href="#" class="active">Contact Us</a>
               </nav>
